# TheNullPointerException

./: CMakeLists.txt  Profile.cpp  Profile.h  Shader.cpp  Shader.h  fields.h  font.cpp  font.h  font_renderer.cpp  font_renderer.h  glad.c  main.cpp  multimeter.c4d  text.vsh
Release/: Release.7z  text.fsh
include/glad/: glad.h
